# sqlite-extras-rs

./: .gitignore  Cargo.toml  README.md  test.db
.github/workflows/: ci.yml
src/: lib.rs
src/queries/: compile_options.rs  index_size.rs  integrity_check.rs  mod.rs  pragma.rs  sequence_number.rs  shared.rs  table_size.rs  total_size.rs
src/sql/: compile_options.sql  index_size.sql  integrity_check.sql  pragma.sql  sequence_number.sql  table_size.sql  total_size.sql
